opam-version: "2.0"
maintainer: "Carmelo Piccione <carmelo.piccione@struktured.io>"
authors: "Carmelo Piccione"
homepage: "https://github.com/struktured/ocaml-gemini"
license: "MIT"
bug-reports: "https://github.com/struktured/ocaml-gemini/issues"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.07.0"}
  "async" {>= "v0.11.0"}
  "async_ssl"
  "cohttp-async"
  "dune" {build}
  "ppx_jane"
  "uri"
  "hex"
  "yojson"
  "zarith"
  "nocrypto"
  "ppx_deriving_yojson"
  "expect_test_helpers" {build with-tests}
]
