opam-version: "2.0"
maintainer: "Carmelo Piccione <carmelo.piccione@gmail.com>"
synopsis: "OCaml bindings for Gemini Trading Exchange API"
authors: "Carmelo Piccione"
homepage: "https://github.com/struktured/ocaml-gemini"
license: "MIT"
bug-reports: "https://github.com/struktured/ocaml-gemini/issues"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.06.1"}
  "async" {>= "v0.11.0"}
  "core" {>= "v0.11.1"}
  "async_ssl"
  "cohttp-async"
  "dune" {build}
  "ppx_jane"
  "uri"
  "hex"
  "yojson"
  "zarith"
  "nocrypto"
  "ppx_deriving_yojson"
  "websocket-async"
  "expect_test_helpers"
]
