opam-version: "2.0"
maintainer: "Carmelo Piccione <carmelo.piccione@gmail.com>"
synopsis: "OCaml bindings for Gemini Trading Exchange API"
description: "This library implements the Gemini exchange v1 REST, Market
Data, and Order events websockets services. It is backed by cohttp-async
and websockets-async to do the heavy lifting. A provisional console interface
is also provided using s-expressions to encode request parameters."
authors: "Carmelo Piccione"
homepage: "https://github.com/struktured/ocaml-gemini"
license: "MIT"
bug-reports: "https://github.com/struktured/ocaml-gemini/issues"
dev-repo: "git+https://github.com/struktured/ocaml-gemini.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
doc: "https://struktured.github.io/ocaml-gemini/"
depends: [
  "ocaml" {>= "5.1.0"}
  "async" {>= "v0.16.0"}
  "core" {>= "v0.16.2"}
  "async_ssl"
  "cohttp-async"
  "dune" {build}
  "ppx_jane"
  "uri"
  "hex"
  "yojson" {>= "2.1.0"}
  "zarith"
  "nocrypto"
  "ppx_deriving_yojson" {>= "3.7.0"}
  "ppx_csv_conv"
  "csvfields"
  "cohttp_async_websocket"
  "expect_test_helpers"
]
